# ARGOS-NT

./: .gitignore  README.md  docker-compose.yml  install-tools.md  pyproject.toml
argos_nt/: __init__.py  cli_menu.py  config_manager.py  main.py
argos_nt/agents/: __init__.py  analyst_agent.py  architect_agent.py  parseAgentsPrompt.md  parser_agent.py  pipeline.py  scout_agent.py  sifter_agent.py
argos_nt/core/: boot_checks.py  constants.py  history_service.py  provider_service.py  report_service.py  scan_service.py
argos_nt/drivers/: __init__.py  neo4j_driver.py  provider_manager.py
argos_nt/tools/: __init__.py  tool_executor.py
argos_nt/ui/: __init__.py  app.py  banner_manager.py
argos_nt/ui/assets/banners/: banner1.txt  banner2.txt  banner3.txt  banner4.txt  banner5.txt  banner6.txt  banner7.txt
data/input/: case_template_v2.md  investigation_acme.txt
ollama/: Modelfile
